<resources>
    <string name="app_name">MaPPS - Form 8: Birth History and Maternal Postpartum Antrhopometric Assessment</string>
    <string name="app_name8"></string>
    <string name="app_name7">MaPPS - Form 7: Infant Anthropometric and Abnormality Assessment at Birth (24 hours postpartum)</string>
    <string name="app_name9">MaPPS - Form 9: Neonatal Anthropometry and Morbidity Assessment (28 days postpartum)</string>
    <string name="app_name10">MaPPS - Form 10: Infant Anthropometric and Feeding Assessment (3 months postpartum)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٽرويو شروع ڪريو </string>
    <string name="nextSection"> اڳيون سيڪشن </string>
    <string name="Seca"> معلومات براء سڃاڻپ </string>
    <string name="Secb">  آخري ماهواري جي نشاندهي </string>
    <string name="form5">الٽراسائونڊ جو معائنو</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other">ٻيو ڪو(وضاحت ڪريو)</string>
    <string name="dkn">خبر ڪونهي</string>
    <string name="yes">ها</string>
    <string name="no">نه</string>
    <string name="na">لاڳو نه ٿو ٿئي</string>
    <string name="male"> مرد </string>
    <string name="female"> عورت </string>
    <string name="year"> سال </string>
    <string name="month"> مهينو </string>
    <string name="day"> ڏينهن </string>
    <string name="weeks"> هفتا </string>
    <string name="hours"> ڪلاڪ </string>
    <string name="times"> تعداد </string>
    <string name="gl"> g/L </string>
    <string name="mp08a001"> خاندا ن نمبر </string>
    <string name="mp08a002"> شرڪت ڪندڙ جو شناخت نمبر </string>
    <string name="mp08a003"> شرڪت ڪندڙ جو نالو </string>
    <string name="mp08a005"> گھر جي سربراه جو نالو </string>
    <string name="mp08a008"> رابطي لاء نمبر </string>
    <string name="mp08a006"> ڳوٺ جو نالو </string>
    <string name="mp08a007"> مڪمل پتو </string>
    <string name="mp08a013"> زباني رضامندي </string>
    <string name="mp08a014"> انٽرويو جو نتيجو </string>
    <string name="mp08a01401"> پورو ٿيو </string>
    <string name="mp08a01402"> اڌ ۾ ڇڏيو </string>
    <string name="mp08a01403"> انڪار ڪيو </string>
    <string name="mp08a01404"> ٻن دورن کان پوء به ڪير به موجوده نه هو </string>
    <string name="mp08a01405"> لڏي وئي </string>
    <string name="mp08a01406">Ultrasound not done </string>
    <string name="sectionb"> ماءُ جو حال احوال </string>
    <string name="mp08b001"> ما ءَ ڪٿي آهي ؟ </string>
    <string name="mp08b001a"> اڃا اسپتال ۾ آهي </string>
    <string name="mp08b001b"> گهر ۾ خاندان سان گڏ </string>
    <string name="mp08b001c"> وفات ڪري وئي </string>
    <string name="mp08b002"> وفات جي تاريخ </string>
    <string name="mp08b003"> ويم جا نتيجا </string>
    <string name="mp08b003a"> ٻار جو ضايع ٿيڻ </string>
    <string name="mp08b003b"> مئل ٻار پيدا ٿيڻ </string>
    <string name="mp08b003c"> زنده ٻار پيدا ٿيڻ </string>
    <string name="mp08b003d"> جڙوا زنده ٻار پيدا ٿيڻ </string>
    <string name="mp08b003e"> هڪ زنده ۽ هڪ مئل ٻار پيدا ٿيڻ </string>
    <string name="mp08b004"> ٻار ضايع يا پئدائش جي تاريخ </string>
    <string name="mp08b004t">ڄمڻ جو وقت </string>
    <string name="mp08b005"> ٻار ضايع يا پئدائش وقت حمل جو دورانيو هفتن ۾ </string>
    <string name="mp08b006"> ٻار جي موجوده صورتحال </string>
    <string name="mp08b006a"> زنده </string>
    <string name="mp08b006b"> وفات ڪري ويو </string>
    <string name="mp08b006c"> جاڙا زنده </string>
    <string name="mp08b006d"> هڪ زنده هڪ وفات ڪري ويو </string>
    <string name="mp08b006e"> جاڙا وفات ڪري ويا </string>
    <string name="mp08b007"> ڇا ماءَ ويم کانپوء اسپتال جي انتهائي نگراني واري جڳهه تي داخل هئي ِ؟ </string>
    <string name="mp08b008"> جيڪڏهن ها ته گهڻن ڏينهن کان (جيڪڏهن 24 ڪلاڪ نه ٿيا آهن ته هڪ ڏينهن ڪري لکو) </string>
    <string name="sectionc"> ويم جي جانچ </string>
    <string name="mp08c001"> ويم ڪيئن ٿيو هيو؟ </string>
    <string name="mp08c001a"> پاڻمرادو </string>
    <string name="mp08c001b"> دوائن جي ذريئي </string>
    <string name="mp08c001c"> ويم جا سور نه ٿيا </string>
    <string name="mp08c002"> ويم کان پهرين گھڻو وقت اڳ توهان کي سور شروع ٿيا؟ </string>
    <string name="mp08c002a"> 24 ڪلاڪ پهرين </string>
    <string name="mp08c002b"> 24 ڪلاڪن کان پوء </string>
    <string name="mp08c00277"> لاڳو نه تو ٿئي ( ويم دوران شروع ٿيڻ يا وڏي آپريشن کان پهرين شروع نه ٿيڻ ) </string>
    <string name="mp08c003"> پاڻي ڪڏهن آيو ؟ </string>
    <string name="mp08c003a"> ويم جا سور شروع ٿيڻ کان پهري </string>
    <string name="mp08c003b"> ويم جا سور شروع ٿيڻ کان پهرين يا ويم جي دوران </string>
    <string name="mp08c004"> ٻار ڄڻڻ کان ڪيترو وقت اڳ پاڻي شروع ٿيو؟ </string>
    <string name="mp08c004a"> 24 ڪلاڪ پهرين </string>
    <string name="mp08c004b"> 24 ڪلاڪن کان پوء </string>
    <string name="mp08c00477"> لاڳو نه تو ٿئي ( ويم دوران شروع ٿيڻ يا وڏي آپريشن کان پهرين شروع نه ٿيڻ ) </string>
    <string name="mp08c005"> ڇا پائي صاف هو ؟ </string>
    <string name="mp08c005a"> هان صاف هو </string>
    <string name="mp08c005b"> نه صاف نه هو يا ڪاراڻ تي هو </string>
    <string name="mp08c00577"> لاڳو نه ٿو ٿئي ( پاني جي پڙدي جو نه ڦاٽڻ ) </string>
    <string name="mp08c006"> ويم ڪٿي ڪرايو ويو؟ </string>
    <string name="mp08c006a"> گهر </string>
    <string name="mp08c006b"> ڊسٽرڪ يا تعلقه هيڊ قئاٽر </string>
    <string name="mp08c006c"> رورل هيلٿ سينٽر </string>
    <string name="mp08c006d"> بنيادي صحت مرڪز </string>
    <string name="mp08c006e"> ذاتي اسپتال </string>
    <string name="mp08c006f"> رستي ويندي ويم ٿيو </string>
    <string name="mp08c007"> ٻار ڪنهن ڄڻايو ؟ </string>
    <string name="mp08c007a"> ڊاڪٽر </string>
    <string name="mp08c007b"> نرس. مڊوائيف </string>
    <string name="mp08c007c"> دائي </string>
    <string name="mp08c007d"> مائيٽ </string>
    <string name="mp08c007e"> پاڻ </string>
    <string name="mp08c008"> ويم جو قسم ڪهڙو هو؟ </string>
    <string name="mp08c008a"> نارمل ويم </string>
    <string name="mp08c008b"> ننڍوآپريشن </string>
    <string name="mp08c008c"> اوزارن جي مدد سان ٻار کي پاسيرو يا الٽوڪري ڪڍ ڻ </string>
    <string name="mp08c008d"> وڏو آپريشن </string>
    <string name="mp08c008e"> ٻار ضايع ٿيڻ جي ڪري صفائي </string>
    <string name="mp08c008f"> ٻار ضايع ٿيڻ جي ڪري مينيوئل ويڪيوم ايسپئريشن </string>
    <string name="mp08c009"> ڪهڙي سبب جي ڪري سور وڌايا ويا يا آپريشن ڪيو ويو؟ </string>
    <string name="mp08c009a"> ٻچيداني مان خون جواخراج ٿيڻ </string>
    <string name="mp08c009b"> ٻچيداني ۾ ٻار جي موت </string>
    <string name="mp08c009c"> حمل جي ڪري بلڊ پريشر وڌي ويو </string>
    <string name="mp08c009d"> حمل جي دوران جھٽڪا </string>
    <string name="mp08c009e"> حمل جي دوران شديد جهٽڪا، بيهوشي </string>
    <string name="mp08c009f"> ٻار پاسيرو هو يا الٽو هو </string>
    <string name="mp08c009g"> ٻار جي دل جو دڙڪڻ يا چرپر گهٽ ٿيڻ </string>
    <string name="mp08c009h"> ويم جا سور گهٽ ٿيڻ </string>
    <string name="mp08c009i"> ٻار جو مٿو وڏو هجڻ </string>
    <string name="mp08c009j"> ويم جا سور شروع ٿيڻ کان اڳ جهلي ڦاٽڻ </string>
    <string name="mp08c009k"> ٻار جو پيٽ ۾ نه وڌڻ يا حمل لاءِ عمر جو ننڍو هجڻ </string>
    <string name="mp08c009l"> حمل جي عمر 42 هفتن کان وڌيڪ </string>
    <string name="mp08c009m"> سمال پلوڪ </string>
    <string name="mp08c009n"> ماءَ جي عرض ڪرڻ </string>
    <string name="mp08c009o"> ماءَ جو ٻيو ڪو سبب </string>
    <string name="mp08c009p"> پهرين آپريشن جي ڪري </string>
    <string name="mp08c009q"> ٻار جو ٻيو ڪو سبب </string>
    <string name="mp08c010"> ٻار جو ڪهڙو حصو پهرين ٻاهر آيو؟ </string>
    <string name="mp08c010a"> مٿو </string>
    <string name="mp08c010b"> هيٺيون حصو </string>
    <string name="mp08c010c"> پير </string>
    <string name="mp08c010d"> هٿ يا ٻانهن </string>
    <string name="mp08c011"> ٻار جو ناڙو ڪٿي هو جنهن وقت ٻار ڄميو هو؟ </string>
    <string name="mp08c011a"> ٻار تي ويڙهيل نه هو </string>
    <string name="mp08c011b"> ڳچي ۾ ويڙهيل هو </string>
    <string name="mp08c011c"> جسم تي ويڙهيل هو </string>
    <string name="mp08c01188"> ڪنهن ٻي جاء تي</string>
    <string name="mp08c012"> ڇا ويم کان پوء ٻار رونو ، چرپر ڪئي يا ساه کنيو پي ؟ </string>
    <string name="mp08c013"> ڇا اور ويم کانپوءِ هڪ ڪلاڪ ۾ ٻاهر آئي هئي؟ </string>
    <string name="mp08c014"> ڇا ننڍي آپريشن ٿي هئي؟ </string>
    <string name="mp08c015"> ڇا توهان کي ويم کان پهرين يا ويم کانپوءِ رت آيو هو؟ </string>
    <string name="mp08c016"> ساڳئي وقت ۾ پيدا ٿيندڙ ٻارن جا شناخت نمبر ڏيو؟ </string>
    <string name="sectiond"> ٿڃ پيارڻ جي جانچ </string>
    <string name="mp08d001"> پيدائش کان ڪيتري دير بعد اوهان (ٻار جو نالو) کي پنهنجي ڇاتي سان لڳايو؟ جيڪڏهن هڪ ڪلاڪ کان گھٽ آهي ته 1 تي گول لڳايو ۽ نوٽ ڪريو. 1 ڪلاڪ کان 23 ڪلاڪن تائين مڪمل ڪلاڪ نوٽ ڪريو يا وري 2 تي گول لڳايو ۽ مڪمل ڏينهن جو تعداد نوٽ ڪريو </string>
    <string name="mp08d001a"> هڪ ڪلاڪ اندر </string>
    <string name="mp08d001b"> ڪلاڪن کان پوء </string>
    <string name="mp08d001c"> ڏينهن کان پوء </string>
    <string name="mp08d001d"> ماءُ جو کير نه شُروع ڪيو </string>
    <string name="mp08d002"> ڇا توهان پنهنجي ٻارکي پنهنجو پهريون کير پياريوهيو؟ </string>
    <string name="mp08d003"> ڇا(ٻار جو نالو) کي ماءِ جي کير کان علاوه پهرين ٽن ڏينهن۾ڪاِٻي شيءِ ڏني هئي؟ </string>
    <string name="mp08d004"> جيڪڏهن ها ته ڇا ڏنو ويو هيو؟ </string>
    <string name="mp08d004a"> پاڻي </string>
    <string name="mp08d004b"> مٺو پاڻي </string>
    <string name="mp08d004c"> پاڻي جونمڪول </string>
    <string name="mp08d004d"> جوس </string>
    <string name="mp08d004e"> تازوکير </string>
    <string name="mp08d004f"> ٻارن جوخاص کير </string>
    <string name="mp08d004g"> چانهه </string>
    <string name="mp08d004h"> ڪافي </string>
    <string name="mp08d004i"> ماکي </string>
    <string name="mp08d005"> جيڪڏهن سوال نمبر 3 ۾ ها آهي ته، ڇا روزانو ٻار کي کاڌو ڏنو پيو وڃي. </string>
    <string name="mp08d006"> گھڻا دفعا ماء ٻار کي ڏينهن ۽ رات ۾ ٿڃ پياري ٿي؟ </string>
    <string name="mp08e"> ماء جو قد ۽ وزن جي ماپ </string>
    <string name="mp08esubM1"> Measurer 1 </string>
    <string name="mp08esubM2"> Measurer 2 </string>
    <string name="mp08esubM3"> Measurer 3 </string>
    <string name="mp08e001"> قد جي ماپ لکو </string>
    <string name="mp08e002"> قد جي ماپ لکو </string>
    <string name="mp08e003"> ڇا قد جي ماپ ۾ ڪوفرق (>1 cm) آيوآهي </string>
    <string name="mp08e003sub"> If no (differ by 1.0 cm), go to Q207 </string>
    <string name="mp08e004"> قد جي ماپ لکو </string>
    <string name="mp08e005"> وزن لکو </string>
    <string name="mp08e006"> وزن لکو </string>
    <string name="mp08e007"> آيوآهي (>.5 kg) ڇا وزن ۾ ڪو فرق </string>
    <string name="mp08e007sub"> If no (differ by 0.5 kg), go to Q211 </string>
    <string name="mp08e008"> وزن لکو </string>
    <string name="mp08e009"> کاٻي ٻانهن يا /ڏوري جي ماپ لکو </string>
    <string name="mp08e010"> کاٻي ٻانهن يا /ڏوري جي ماپ لکو </string>
    <string name="mp08e011"> ڇا کاٻي ٻانهن يا /ڏوري جي ماپ ۾ (>.5 cm) فرق آيو آهي. </string>
    <string name="mp08e011sub"> If no (differ by 0.5cm), go to Q215 </string>
    <string name="mp08e012"> کاٻي ٻانهن يا /ڏوري جي ماپ لکو </string>
    <string name="mp08f"> رت جي مقدار معلوم ڪرڻ ۽ رت جو نمونو وٺڻ </string>
</resources>