<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SectionBActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.mappsform7.activities.SectionBActivity" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingRight="14dp">

            <TextView
                android:id="@+id/app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/sectionb"
                android:textSize="40sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/mp08b001"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/mp08b001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mp08b001a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b001a" />

                <RadioButton
                    android:id="@+id/mp08b001b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b001b" />

                <RadioButton
                    android:id="@+id/mp08b001c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b001c" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrpmp08b002"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/mp08b002"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

                <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                    android:id="@+id/mp08b002"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:focusable="false"
                    android:hint="@string/mp08b002"
                    android:textColor="@android:color/black"
                    app:dateFormat="dd-MM-yyyy" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/mp08b003"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/mp08b003"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mp08b003a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b003a" />

                <RadioButton
                    android:id="@+id/mp08b003b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b003b" />

                <RadioButton
                    android:id="@+id/mp08b003c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b003c" />

                <RadioButton
                    android:id="@+id/mp08b003d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b003d" />

                <RadioButton
                    android:id="@+id/mp08b003e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/mp08b003e" />

                <RadioButton
                    android:id="@+id/mp08b00388"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/other" />

            </RadioGroup>

            <EditText
                android:id="@+id/mp08b00388x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklkmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/other"
                android:inputType="textCapWords"
                android:text='@{mp08b00388.checked ? mp08b00388x.getText.toString : ""}'
                android:visibility="@{mp08b00388.checked ? View.VISIBLE : View.GONE}" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/mp08b004"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                android:id="@+id/mp08b004"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:focusable="false"
                android:hint="@string/mp08b004"
                android:textColor="@android:color/black"
                app:dateFormat="dd-MM-yyyy" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/mp08b005"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/mp08b005"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weeks"
                android:inputType="number"
                android:maxLength="2" />

            <LinearLayout
                android:id="@+id/fldGrpmp08b006"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/mp08b006"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

                <RadioGroup
                    android:id="@+id/mp08b006"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/mp08b006a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/mp08b006a" />

                    <RadioButton
                        android:id="@+id/mp08b006b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/mp08b006b" />

                    <RadioButton
                        android:id="@+id/mp08b006c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/mp08b006c" />

                    <RadioButton
                        android:id="@+id/mp08b006d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/mp08b006d" />

                    <RadioButton
                        android:id="@+id/mp08b006e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:text="@string/mp08b006e" />

                </RadioGroup>


            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/mp08b007"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/mp08b007"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mp08b007a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/mp08b007b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="1"
                    android:text="@string/no" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fldGrpmp08b008"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/mp08b008"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

                <EditText
                    android:id="@+id/mp08b008"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/day"
                    android:inputType="number"
                    android:maxLength="2" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:padding="2dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e"
                    android:textSize="32sp" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:padding="2dp"
                    android:text="@string/nextSection"
                    android:textColor="@color/whiteOverlay"
                    android:textSize="32sp"
                    android:visibility="visible" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</layout>
